<resources>
    <string name="app_name">Not Forgot!</string>
    <string name="list_placeholder">У вас пока нет дел.\nСчастливый вы человек!</string>
    <string name="btn_edit">Редактировать</string>
    <string name="title_login">Вход</string>
    <string name="title_registration">Регистрация</string>
    <string name="title_add_category">Добавить категорию</string>
    <string name="positive_btn_add_category">Сохранить</string>
    <string name="negative_btn">Отмена</string>
    <string name="success_add_category">Категория успешно сохранена</string>
    <string name="success_add_task">Дело успешно сохранено</string>

    <string name="hint_mail">E-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_name">Имя</string>
    <string name="hint_repeat_password">Повторите пароль</string>

    <string name="error_empty_field">Заполните поле</string>
    <string name="error_short_password">Длина пароля должна быть не менее 8 символов</string>
    <string name="error_password_not_confirm">Пароли не совпадают</string>
    <string name="error_bad_mail">Некорректный E-mail</string>

    <string name="btn_finished_registration">Зарегистрироваться</string>
    <string name="btn_cancel_registration">Войти</string>

    <string name="hint_input_category">Название категории</string>

    <string name="title_add_task">Добавить заметку</string>
    <string name="hint_title_task">Название</string>
    <string name="hint_description_task">Описание</string>
    <string name="hint_category_task">Категория</string>
    <string name="hint_priority_task">Приоритет</string>
    <string name="hint_deadline_task">Сделать до</string>
    <string name="btn_save_task">Сохранить</string>

    <string name="action_logout">Logout</string>

    <string name="task_done">Выполнено</string>
    <string name="task_not_done">Не выполнено</string>

    <string name="synchronize">Синхронизация данных…</string>
    <string name="dialog_save_message">Сохранить?</string>
    <string name="dialog_save_positive_btn">Да!</string>
    <string name="dialog_save_negative_btn">Отмена</string>

    <string name="title_edit_task">Изменить задачу</string>
    <string name="title_error_dialog">Ошибка</string>
    <string name="message_login_error">Ошибка авторизации. Проверьте введенные данные или повторите позже!</string>
    <string name="message_registration_error">Ошибка регистрации. Повторите позже!</string>
    <string name="message_no_internet">Отсутствует интернет-соединение. Авторизация и регистрация будут недоступны!</string>
    <string name="neutral_button_error_dialog">Ок</string>
</resources>