<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.RegistrationFragment">

    <data>

        <import type="com.example.todo.presentation.common.ObservableLiveData" />

        <import type="com.example.todo.presentation.utils.RegistrationFormValidate" />

        <variable
            name="newUser"
            type="ObservableLiveData&lt;com.example.todo.presentation.entity.NewUser>" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_panel"
        android:elevation="8dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_registration"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/colorTextFieldBg"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:error="@{newUser.name == `` ? @string/error_empty_field : null}"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/hint_name"
                android:inputType="textEmailAddress"
                android:text="@={newUser.name}"
                style="@style/BasicInputField" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/colorTextFieldBg"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:error="@{!RegistrationFormValidate.INSTANCE.validateEmail(newUser.email) ? @string/error_bad_mail : null}"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/hint_mail"
                android:inputType="textEmailAddress"
                android:text="@={newUser.email}"
                style="@style/BasicInputField" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/colorTextFieldBg"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:error="@{!RegistrationFormValidate.INSTANCE.validatePasswordLength(newUser.password) ? @string/error_short_password : null}"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="@={newUser.password}"
                style="@style/BasicInputField" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/colorTextFieldBg"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:error="@{!RegistrationFormValidate.INSTANCE.validatePasswordConfirmation(newUser.password, newUser.confirmPassword) ? @string/error_password_not_confirm : null}"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/hint_repeat_password"
                android:inputType="textPassword"
                android:text="@={newUser.confirmPassword}"
                style="@style/BasicInputField" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/AccentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_finished_registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

        <Button
            android:id="@+id/btnLogIn"
            style="@style/GrayButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_cancel_registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>