<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddEditTaskFragment">

    <data>
        <import type="com.example.todo.presentation.entity.Task"/>
        <import type="com.example.todo.presentation.entity.Category"/>

        <variable
            name="task"
            type="Task" />

        <variable
            name="category"
            type="Category" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/title_add_task"
            style="@style/TitleText"/>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="2dp"
            app:cardElevation="2dp"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_title_task"
                        android:paddingBottom="16dp"
                        android:singleLine="true"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout7"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="120"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/categoryContainer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:hint="@string/hint_description_task"
                        android:inputType="text"
                        android:nestedScrollingEnabled="true"
                        android:singleLine="false"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:id="@+id/categoryContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/round_spinner"
                    app:layout_constraintBottom_toTopOf="@+id/priorityContainer"
                    app:layout_constraintEnd_toStartOf="@+id/ivAddCategory"
                    app:layout_constraintStart_toStartOf="parent">

                    <Spinner
                        android:id="@+id/spCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/hint_category_task"
                        android:spinnerMode="dropdown"
                        tools:listitem="@layout/support_simple_spinner_dropdown_item" />
                </FrameLayout>



                <ImageView
                    android:id="@+id/ivAddCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_colored_add"
                    app:layout_constraintBottom_toBottomOf="@+id/categoryContainer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/categoryContainer" />

                <FrameLayout
                    android:background="@drawable/round_spinner"
                    android:id="@+id/priorityContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Spinner
                        android:id="@+id/spPriority"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/hint_category_task"
                        android:spinnerMode="dropdown"
                        tools:listitem="@layout/support_simple_spinner_dropdown_item" />
                </FrameLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_deadline_task"
                        android:paddingBottom="16dp" />
                </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:text="@string/btn_save_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/AccentButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
